# archiveallthethings

./: .gitignore  LICENSE  README.md  archiveallthethings.py  pyproject.toml
