[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archiveallthethings"
version = "1.0.0"
description = "Download and archive your Things from Thingiverse"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "Tony Buser"}
]
keywords = [
    "thingiverse",
    "3dprinting",
    "stl",
    "archive",
    "downloader",
    "backup"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
archiveallthethings = "archiveallthethings:main"

[project.urls]
Homepage = "https://github.com/tbuser/archiveallthethings"
Repository = "https://github.com/tbuser/archiveallthethings"
Issues = "https://github.com/tbuser/archiveallthethings/issues"

[tool.setuptools]
py-modules = ["archiveallthethings"]

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
]
